service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolly-api
spec:
  selector:
    app: dolly-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
